--- a/Audiora/Audiora - Artists.html
+++ b/Audiora/Audiora - Artists.html
@@ -15,7 +15,7 @@
 
     <table id="AccueilPlaylistArtist">
         <tr>
-            <td><a href="C:\Users\Evan\OneDrive\Bureau\Visual Studio 2022\HTML\Audiora\Audiora - Accueil.html">Accueil</a></td>
+            <td><a href="C:\Users\Evan\OneDrive\Bureau\Visual Studio 2022\HTML\Audiora\Index.html">Accueil</a></td>
             <td><a href="C:\Users\Evan\OneDrive\Bureau\Visual Studio 2022\HTML\Audiora\Audiora - PlayList.html">Playlist</a></td>
             <td><a href="C:\Users\Evan\OneDrive\Bureau\Visual Studio 2022\HTML\Audiora\Audiora - Artists.html">Artists</a></td>
         </tr>
